syntax = "proto3";

// 指定生成的 Java 类的包路径
option java_multiple_files = true;
option java_package = "io.github.mikeiansky.grpc";
option java_outer_classname = "HelloProto";
option go_package="mikeian-for-golang/app/grpc/api";

// grpc 服务需要这里来进行统一的定位
package proto;

// 定义服务
service HelloService {
  // grpc 中不能进行重载
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// 请求消息
message HelloRequest {
  string name = 1;
}

// 响应消息
message HelloResponse {
  string message = 1;
}